--- a/UI/angular.json
+++ b/UI/angular.json
@@ -2,7 +2,8 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "cli": {
-    "packageManager": "npm"
+    "packageManager": "npm",
+    "analytics": "b254c6d4-fd0f-498b-90df-ba4dd859ebdf"
   },
   "newProjectRoot": "projects",
   "projects": {
@@ -30,6 +31,8 @@
               }
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/bootstrap-icons/font/bootstrap-icons.css",
               "src/styles.scss"
             ],
             "server": "src/main.server.ts",
