--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,7 +14,7 @@
         "--port",
         "8000"
       ],
-      "python": "${workspaceFolder}/.venv/bin/python",
+      "python": "${workspaceFolder}/.venv/Scripts/python",
       "cwd": "${workspaceFolder}",
       "jinja": true
     }
