--- a/UI/package.json
+++ b/UI/package.json
@@ -34,12 +34,15 @@
     "@angular/platform-server": "^21.0.0",
     "@angular/router": "^21.0.0",
     "@angular/ssr": "^21.0.4",
+    "angular-gridster2": "^21.0.0",
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
     "classlist.js": "^1.1.20150312",
+    "echarts": "^6.0.0",
     "express": "^5.1.0",
     "google-libphonenumber": "^3.2.43",
     "intl-tel-input": "^25.14.0",
+    "ngx-echarts": "^21.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
