dynamo db integrated but query per query is malfunctioning dynamo db need to see it

--- a/API/app/core/settings/env.sample
+++ b/API/app/core/settings/env.sample
@@ -1,6 +1,13 @@
-COGNITO_CLIENT_ID = ""
-COGNITO_CLIENT_SECRET = ""
-COGNITO_REGION = ""
-COGNITO_USER_POOL_ID = ""
 MONGO_URL = ""
 DB_NAME = ""
+IS_CLOUD=true
+#Cloud Config
+COGNITO_CLIENT_ID = ""
+COGNITO_CLIENT_SECRET = ""
+COGNITO_REGION = "ap-south-1"
+COGNITO_USER_POOL_ID = ""
+AWS_ACCESS_KEY_ID=""
+AWS_SECRET_ACCESS_KEY=""
+AWS_REGION=us-east-1
+DYNAMO_ENDPOINT_URL=""
+DYNAMO_PREFIX=expense_tracker
